--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=main
